# SamuraiCiao

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
headers/: core.h  window.h
headers/assets/: assetManager.h  assetManagerTextures.h  model.h
headers/backend/: openglbackend.h
headers/graphics/: particles.h  shadows.h
headers/models/: assetManager.h
headers/scene/: lanterns.h  skybox.h  temple.h
headers/systems/: camera.h  debug.h  interface.h  renderManager.h  sceneEditor.h  shaders.h
headers/types/: random.h  renderTypes.h  types.h
objects/models/: car.gltf  ground.gltf  lantern.gltf  lantern_lamppost.gltf  scene.gltf  skybox.gltf  sun.gltf  testnormalmapping.gltf
shaders/: depthPass.frag  depthPass.vert  main.frag  main.vert  model.frag  model.vert  particles.comp  particles.frag  particles.vert  skybox.frag  skybox.vert
src/: core.cpp  main.cpp  window.cpp
src/assets/: assetManager.cpp  assetManagerTextures.cpp  model.cpp
src/backend/: openglbackend.cpp
src/graphics/: particles.cpp  shadows.cpp
src/models/: assetManager.cpp  model.cpp
src/scene/: lanterns.cpp  skybox.cpp  temple.cpp
src/systems/: camera.cpp  debug.cpp  interface.cpp  renderManager.cpp  sceneEditor.cpp  shaders.cpp
